# CommunityDashboard

./: .editorconfig  .env.example  .env.production.example  .firebaserc  .gitignore  .pnp.cjs  .yarnrc.yml  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  SECURITY.md  aadconfig.json  angular.json  app.py  deploy_production.sh  docker-compose.ports.yml  docker-compose.prod.yml  docker-compose.yml  documentation.json  firebase.json  init-letsencrypt.sh  karma.conf.js  package-lock.json  package.json  requirements.txt  tsconfig.json
projects/plots/: MANIFEST.in  app.py  conftest.py  main.py  package.json  pyproject.toml  requirements.txt
projects/plots/plots/: __init__.py
projects/plots/plots/blueprints/: ehden_routes.py  pubmed_miner.py  pubmed_routes.py  rest.py  user_routes.py  youtube_routes.py
projects/plots/plots/figures/: ehden_course_completions.py  ehden_users.py  publications_citations.py  researchers.py  youtube_annual.py  youtube_monthly.py
projects/plots/plots/functions/: events.py  github_miner.py  github_miner_test.py  pubmed_miner.py  pubmed_miner_test.py  youtube_miner.py  youtube_miner_test.py
projects/plots/plots/pages/: ehden_course_completions.py  ehden_dash.py  ehden_users.py  pub_dash.py  publications_citations.py  pubmed_dash.py  researchers.py  youtube_annual.py  youtube_dash.py  youtube_monthly.py
projects/plots/plots/services/: db.py  ehden_miner.py  github.py  google_scholar.py  google_scholar_test.py  nlp.py  nlp_test.py  pubmed.py  pubmed_miner.py  pubmed_miner_test.py  pubmed_test.py  sqlite_db.py  umls.py  youtube.py  youtube_miner.py  youtube_transcript.py
projects/plots/plots/templates/: articleManager.html  base.html  ehden_dashboard.html  home.html  layout.html  login.html  slidingbanner.html  youtube_dashboard.html
projects/plots/plots/test/: course-stats.json  ehden.json  ehden_course_completions.json  ehden_fixture.json  ehden_users.json  getPMArticles_searchAll.pkl  mock_init_cosmos.py  pub_med_cumulative_authors.json  pub_med_fixture.json  pub_med_new_authors.json  pubmed.json  pubmed_authors.json  researchers.json  schema.sql  serpApi.pkl  test.db  (+4 more)
(+731 files in other folders)
