[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plots"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "flask >= 2.2.2",
    "azure-functions",
    "azure-cosmos >= 4.2.0",
    "google-api-python-client >= 2.31.0", #For youtube data API
    "google-search-results == 2.4.1",  #For serpapi API https://github.com/serpapi/google-search-results-python
    "oauth2client >= 4.1.3",
    "pandas >= 1.3.4",
    "biopython >= 1.22.3",
    "xmltodict >= 0.12.0",
    "levenshtein >= 0.18.1",
    "fuzzywuzzy >= 0.18.0",
    "dash >= 2.7.1",
    "Flask-Session>=0.4.0",
    "dash-bootstrap-components>=1.1.0",
    "pytest>=7.1.2",
    "ratelimit >= 2.2.1",
    "scispacy >= 0.5.0",
    "youtube_transcript_api >= 0.4.4",
]

[project.optional-dependencies]
development = ["Flask-Cors==3.0.10",]